crates/sui-prover/tests/snapshots/dynamic_field_ext/borrow_or_unknown.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_field_ext/borrow_or_unknown.fail.move:21:5
   │
21 │     ensures(*borrow_or_unknown<u64, u8>(&x.id, k) == 0);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_field_ext/borrow_or_unknown.fail.move:19: test_absent_not_specific
